--- a/news.html
+++ b/news.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daftar Berita - Portal Berita lapas</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
@@ -90,9 +91,9 @@
                                 <h3 class="text-xl font-bold text-gray-800 mb-2 hover:text-blue-600"><a href="show-news.html">Peluncuran Aplikasi Layanan Publik Terintegrasi Kota Medan</a></h3>
                                 <p class="text-gray-600 mb-3">WaliKota Medan meresmikan aplikasi layanan publik digital yang mengintegrasikan 27 jenis layanan dalam satu platform. Aplikasi ini memudahkan warga mengakses berbagai layanan administrasi...</p>
                                 <div class="flex items-center text-sm text-gray-500">
-                                    <span>📅 15 Desember 2025</span>
+                                    <span><i class="fa-solid fa-calendar-days"></i> 15 Desember 2025</span>
                                     <span class="mx-2">•</span>
-                                    <span>👤 Admin lapas</span>
+                                    <span><i class="fa-solid fa-user"></i> Admin lapas</span>
                                 </div>
                             </div>
                         </div>
@@ -107,9 +108,9 @@
                                 <h3 class="text-xl font-bold text-gray-800 mb-2 hover:text-blue-600"><a href="show-news.html">Rapat Koordinasi Penanganan Layanan Pengaduan Masyarakat</a></h3>
                                 <p class="text-gray-600 mb-3">Kepala Dinas memimpin rapat koordinasi untuk meningkatkan kualitas respon pengaduan masyarakat melalui berbagai kanal digital seperti WhatsApp, website, dan aplikasi mobile...</p>
                                 <div class="flex items-center text-sm text-gray-500">
-                                    <span>📅 14 Desember 2025</span>
+                                    <span><i class="fa-solid fa-calendar-days"></i> 14 Desember 2025</span>
                                     <span class="mx-2">•</span>
-                                    <span>👤 Budi Santoso</span>
+                                    <span><i class="fa-solid fa-user"></i> Budi Santoso</span>
                                 </div>
                             </div>
                         </div>
@@ -124,9 +125,9 @@
                                 <h3 class="text-xl font-bold text-gray-800 mb-2 hover:text-blue-600"><a href="show-news.html">Sosialisasi Keamanan Siber untuk UMKM</a></h3>
                                 <p class="text-gray-600 mb-3">Workshop keamanan digital untuk pelaku UMKM di Kota Medan dihadiri 150 peserta. Materi meliputi proteksi data, keamanan transaksi online, dan pencegahan phishing...</p>
                                 <div class="flex items-center text-sm text-gray-500">
-                                    <span>📅 13 Desember 2025</span>
+                                    <span><i class="fa-solid fa-calendar-days"></i> 13 Desember 2025</span>
                                     <span class="mx-2">•</span>
-                                    <span>👤 Siti Nurhaliza</span>
+                                    <span><i class="fa-solid fa-user"></i> Siti Nurhaliza</span>
                                 </div>
                             </div>
                         </div>
@@ -141,9 +142,9 @@
                                 <h3 class="text-xl font-bold text-gray-800 mb-2 hover:text-blue-600"><a href="show-news.html">Pendaftaran Pelatihan Coding untuk Pelajar Dibuka</a></h3>
                                 <p class="text-gray-600 mb-3">Program gratis untuk 200 pelajar SMA/SMK se-Kota Medan. Materi meliputi HTML, CSS, JavaScript, dan Python. Pendaftaran hingga 20 Desember 2025...</p>
                                 <div class="flex items-center text-sm text-gray-500">
-                                    <span>📅 12 Desember 2025</span>
+                                    <span><i class="fa-solid fa-calendar-days"></i> 12 Desember 2025</span>
                                     <span class="mx-2">•</span>
-                                    <span>👤 Andi Wijaya</span>
+                                    <span><i class="fa-solid fa-user"></i> Andi Wijaya</span>
                                 </div>
                             </div>
                         </div>
@@ -158,9 +159,9 @@
                                 <h3 class="text-xl font-bold text-gray-800 mb-2 hover:text-blue-600"><a href="show-news.html">Perpanjangan KTP Kini Bisa Online</a></h3>
                                 <p class="text-gray-600 mb-3">Layanan perpanjangan e-KTP kini tersedia melalui aplikasi mobile dan website resmi. Warga tidak perlu antri ke kantor kelurahan untuk perpanjangan KTP yang expired...</p>
                                 <div class="flex items-center text-sm text-gray-500">
-                                    <span>📅 11 Desember 2025</span>
+                                    <span><i class="fa-solid fa-calendar-days"></i> 11 Desember 2025</span>
                                     <span class="mx-2">•</span>
-                                    <span>👤 Rini Damayanti</span>
+                                    <span><i class="fa-solid fa-user"></i> Rini Damayanti</span>
                                 </div>
                             </div>
                         </div>
@@ -175,9 +176,9 @@
                                 <h3 class="text-xl font-bold text-gray-800 mb-2 hover:text-blue-600"><a href="show-news.html">Kunjungan Kerja ke Pemkot Surabaya</a></h3>
                                 <p class="text-gray-600 mb-3">Studi banding pengelolaan smart city dan transformasi digital layanan publik. Delegasi lapas Bandung mempelajari sistem command center dan dashboard pemantauan kota...</p>
                                 <div class="flex items-center text-sm text-gray-500">
-                                    <span>📅 10 Desember 2025</span>
+                                    <span><i class="fa-solid fa-calendar-days"></i> 10 Desember 2025</span>
                                     <span class="mx-2">•</span>
-                                    <span>👤 Agus Setiawan</span>
+                                    <span><i class="fa-solid fa-user"></i> Agus Setiawan</span>
                                 </div>
                             </div>
                         </div>
@@ -256,7 +257,7 @@
                 <div>
                     <h3 class="text-lg font-bold mb-4">Kontak</h3>
                     <div class="space-y-2 text-sm text-blue-200">
-                        <p>📍 Jl. Wastukencana No. 2, Bandung</p>
+                        <p><i class="fa-solid fa-location-dot"></i> Jl. Wastukencana No. 2, Bandung</p>
                         <p>📞 (022) 4233823</p>
                         <p>✉️ lapas@bandung.go.id</p>
                         <p>🕒 Senin - Jumat: 08.00 - 16.00 WIB</p>
