--- a/show-news.html
+++ b/show-news.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detail Berita - Portal Berita lapas</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
@@ -60,15 +61,15 @@
                         <h1 class="text-3xl md:text-4xl font-bold text-gray-800 mb-4">Peluncuran Aplikasi Layanan Publik Terintegrasi Kota Medan</h1>
                         <div class="flex flex-wrap items-center gap-4 text-sm text-gray-600">
                             <div class="flex items-center">
-                                <span class="mr-2">📅</span>
+                                <span class="mr-2"><i class="fa-solid fa-calendar-days"></i></span>
                                 <span>15 Desember 2025, 10:30 WIB</span>
                             </div>
                             <div class="flex items-center">
-                                <span class="mr-2">👤</span>
+                                <span class="mr-2"><i class="fa-solid fa-user"></i></span>
                                 <span>Admin lapas</span>
                             </div>
                             <div class="flex items-center">
-                                <span class="mr-2">👁️</span>
+                                <span class="mr-2"><i class="fa-solid fa-eye"></i></span>
                                 <span>1,234 Views</span>
                             </div>
                         </div>
@@ -226,7 +227,7 @@
                 <div>
                     <h3 class="text-lg font-bold mb-4">Kontak</h3>
                     <div class="space-y-2 text-sm text-blue-200">
-                        <p>📍 Jl. Wastukencana No. 2, Bandung</p>
+                        <p><i class="fa-solid fa-location-dot"></i> Jl. Wastukencana No. 2, Bandung</p>
                         <p>📞 (022) 4233823</p>
                         <p>✉️ lapas@bandung.go.id</p>
                         <p>🕒 Senin - Jumat: 08.00 - 16.00 WIB</p>
