--- a/admin/approval.html
+++ b/admin/approval.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Approval Berita - Portal Berita lapas</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
@@ -29,31 +30,31 @@
                 <ul class="space-y-2">
                     <li>
                         <a href="index.html" class="flex items-center space-x-3 px-4 py-3 hover:bg-blue-700 rounded-lg transition">
-                            <span>📊</span>
+                            <span><i class="fa-solid fa-gauge-high"></i></span>
                             <span>Dashboard</span>
                         </a>
                     </li>
                     <li>
                         <a href="news.html" class="flex items-center space-x-3 px-4 py-3 hover:bg-blue-700 rounded-lg transition">
-                            <span>📰</span>
+                            <span><i class="fa-solid fa-newspaper"></i></span>
                             <span>Kelola Berita</span>
                         </a>
                     </li>
                     <li>
                         <a href="approval.html" class="flex items-center space-x-3 px-4 py-3 bg-blue-700 rounded-lg font-medium">
-                            <span>✅</span>
+                            <span><i class="fa-solid fa-circle-check"></i></span>
                             <span>Approval Berita</span>
                         </a>
                     </li>
                     <li>
                         <a href="#" class="flex items-center space-x-3 px-4 py-3 hover:bg-blue-700 rounded-lg transition">
-                            <span>👥</span>
+                            <span><i class="fa-solid fa-users"></i></span>
                             <span>Pengguna</span>
                         </a>
                     </li>
                     <li class="pt-4 mt-4 border-t border-blue-700">
                         <a href="../index.html" class="flex items-center space-x-3 px-4 py-3 hover:bg-red-600 rounded-lg transition">
-                            <span>🚪</span>
+                            <span><i class="fa-solid fa-right-from-bracket"></i></span>
                             <span>Logout</span>
                         </a>
                     </li>
