--- a/admin/index.html
+++ b/admin/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard Admin - Portal Berita lapas</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
@@ -29,31 +30,31 @@
                 <ul class="space-y-2">
                     <li>
                         <a href="index.html" class="flex items-center space-x-3 px-4 py-3 bg-blue-700 rounded-lg font-medium">
-                            <span>📊</span>
+                            <span><i class="fa-solid fa-gauge-high"></i></span>
                             <span>Dashboard</span>
                         </a>
                     </li>
                     <li>
                         <a href="news.html" class="flex items-center space-x-3 px-4 py-3 hover:bg-blue-700 rounded-lg transition">
-                            <span>📰</span>
+                            <span><i class="fa-solid fa-newspaper"></i></span>
                             <span>Kelola Berita</span>
                         </a>
                     </li>
                     <li>
                         <a href="approval.html" class="flex items-center space-x-3 px-4 py-3 hover:bg-blue-700 rounded-lg transition">
-                            <span>✅</span>
+                            <span><i class="fa-solid fa-circle-check"></i></span>
                             <span>Approval Berita</span>
                         </a>
                     </li>
                     <li>
                         <a href="#" class="flex items-center space-x-3 px-4 py-3 hover:bg-blue-700 rounded-lg transition">
-                            <span>👥</span>
+                            <span><i class="fa-solid fa-users"></i></span>
                             <span>Pengguna</span>
                         </a>
                     </li>
                     <li class="pt-4 mt-4 border-t border-blue-700">
                         <a href="../index.html" class="flex items-center space-x-3 px-4 py-3 hover:bg-red-600 rounded-lg transition">
-                            <span>🚪</span>
+                            <span><i class="fa-solid fa-right-from-bracket"></i></span>
                             <span>Logout</span>
                         </a>
                     </li>
@@ -88,7 +89,7 @@
                                 <h3 class="text-3xl font-bold text-gray-800">127</h3>
                             </div>
                             <div class="w-12 h-12 bg-blue-100 rounded-full flex items-center justify-center text-2xl">
-                                📰
+                                <i class="fa-solid fa-newspaper"></i>
                             </div>
                         </div>
                         <p class="text-xs text-green-600 mt-3">↑ 12% dari bulan lalu</p>
@@ -102,7 +103,7 @@
                                 <h3 class="text-3xl font-bold text-gray-800">8</h3>
                             </div>
                             <div class="w-12 h-12 bg-gray-100 rounded-full flex items-center justify-center text-2xl">
-                                📝
+                                <i class="fa-solid fa-pen-to-square"></i>
                             </div>
                         </div>
                         <p class="text-xs text-gray-600 mt-3">Menunggu ditulis</p>
@@ -116,7 +117,7 @@
                                 <h3 class="text-3xl font-bold text-gray-800">5</h3>
                             </div>
                             <div class="w-12 h-12 bg-yellow-100 rounded-full flex items-center justify-center text-2xl">
-                                ⏳
+                                <i class="fa-solid fa-hourglass-half"></i>
                             </div>
                         </div>
                         <p class="text-xs text-yellow-600 mt-3">Perlu direview segera</p>
@@ -130,7 +131,7 @@
                                 <h3 class="text-3xl font-bold text-gray-800">114</h3>
                             </div>
                             <div class="w-12 h-12 bg-green-100 rounded-full flex items-center justify-center text-2xl">
-                                ✅
+                                <i class="fa-solid fa-circle-check"></i>
                             </div>
                         </div>
                         <p class="text-xs text-green-600 mt-3">Berita aktif</p>
