--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portal Berita - Lembaga Permasyarakatan</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
@@ -190,22 +191,22 @@
             <h2 class="text-3xl font-bold text-gray-800 mb-8 text-center">Kategori Populer</h2>
             <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-6 max-w-5xl mx-auto">
                 <a href="news.html" class="bg-gradient-to-br from-blue-600 to-blue-700 text-white p-6 rounded-lg shadow-lg hover:shadow-xl transition-all hover:scale-105">
-                    <div class="text-4xl mb-3">🏛️</div>
+                    <div class="text-4xl mb-3"><i class="fa-solid fa-building-columns"></i></div>
                     <h3 class="text-xl font-bold mb-2">Pemerintahan</h3>
                     <p class="text-sm text-blue-100">32 Berita</p>
                 </a>
                 <a href="news.html" class="bg-gradient-to-br from-green-600 to-green-700 text-white p-6 rounded-lg shadow-lg hover:shadow-xl transition-all hover:scale-105">
-                    <div class="text-4xl mb-3">📅</div>
+                    <div class="text-4xl mb-3"><i class="fa-solid fa-calendar-days"></i></div>
                     <h3 class="text-xl font-bold mb-2">Kegiatan</h3>
                     <p class="text-sm text-green-100">45 Berita</p>
                 </a>
                 <a href="news.html" class="bg-gradient-to-br from-yellow-600 to-yellow-700 text-white p-6 rounded-lg shadow-lg hover:shadow-xl transition-all hover:scale-105">
-                    <div class="text-4xl mb-3">📢</div>
+                    <div class="text-4xl mb-3"><i class="fa-solid fa-bullhorn"></i></div>
                     <h3 class="text-xl font-bold mb-2">Pengumuman</h3>
                     <p class="text-sm text-yellow-100">28 Berita</p>
                 </a>
                 <a href="news.html" class="bg-gradient-to-br from-purple-600 to-purple-700 text-white p-6 rounded-lg shadow-lg hover:shadow-xl transition-all hover:scale-105">
-                    <div class="text-4xl mb-3">🔧</div>
+                    <div class="text-4xl mb-3"><i class="fa-solid fa-handshake"></i></div>
                     <h3 class="text-xl font-bold mb-2">Layanan</h3>
                     <p class="text-sm text-purple-100">21 Berita</p>
                 </a>
@@ -225,7 +226,7 @@
                 <div>
                     <h3 class="text-lg font-bold mb-4">Kontak</h3>
                     <div class="space-y-2 text-sm text-blue-200">
-                        <p>📍 Jl. Wastukencana No. 2, Bandung</p>
+                        <p><i class="fa-solid fa-location-dot"></i> Jl. Wastukencana No. 2, Bandung</p>
                         <p>📞 (022) 4233823</p>
                         <p>✉️ lapas@bandung.go.id</p>
                         <p>🕒 Senin - Jumat: 08.00 - 16.00 WIB</p>
