--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
             <!-- Logo & Title -->
             <div class="text-center mb-8">
                 <div class="w-20 h-20 bg-[#1e3a8a] rounded-full flex items-center justify-center mx-auto mb-4">
-                    <span class="text-white font-bold text-3xl">DK</span>
+                    <span class="text-white font-bold text-3xl">LP</span>
                 </div>
                 <h1 class="text-2xl font-bold text-gray-800">Login Admin</h1>
                 <p class="text-gray-600 mt-2">Portal Berita lapas Kota Medan</p>
