--- a/news.html
+++ b/news.html
@@ -18,7 +18,7 @@
             <div class="flex items-center justify-between py-4">
                 <div class="flex items-center space-x-4">
                     <div class="w-12 h-12 bg-white rounded flex items-center justify-center">
-                        <span class="text-[#1e3a8a] font-bold text-xl">DK</span>
+                        <span class="text-[#1e3a8a] font-bold text-xl">LP</span>
                     </div>
                     <div>
                         <h1 class="text-lg font-bold">Lembaga Permasyarakatan </h1>
