--- a/admin/create-news.html
+++ b/admin/create-news.html
@@ -136,7 +136,7 @@
                                 <input type="file" id="imageUpload" accept="image/*" class="hidden" onchange="previewImage(event)">
                                 <label for="imageUpload" class="cursor-pointer">
                                     <div id="uploadPlaceholder">
-                                        <div class="text-6xl mb-3">📷</div>
+                                        <div class="text-6xl mb-3"><i class="fa-solid fa-camera"></i></div>
                                         <p class="text-gray-600 font-medium mb-1">Klik untuk upload gambar</p>
                                         <p class="text-sm text-gray-500">PNG, JPG, JPEG (max 2MB)</p>
                                     </div>
