change icons again

--- a/admin/create-news.html
+++ b/admin/create-news.html
@@ -183,7 +183,7 @@
                                 onclick="saveDraft()"
                                 class="px-6 py-3 bg-gray-600 text-white rounded-lg hover:bg-gray-700 transition font-medium"
                             >
-                                💾 Simpan Draft
+                                <i class="fa-solid fa-floppy-disk"></i> Simpan Draft
                             </button>
                             <button 
                                 type="submit"
