--- a/admin/edit-news.html
+++ b/admin/edit-news.html
@@ -203,7 +203,7 @@ Kepala Lembaga Permasyarakatan , Budi Santoso, menyatakan aplikasi ini merupakan
                                 onclick="confirmUnpublish()"
                                 class="px-6 py-3 bg-red-600 text-white rounded-lg hover:bg-red-700 transition font-medium"
                             >
-                                🗑️ Unpublish
+                                <i class="fa-solid fa-circle-xmark"></i> Unpublish
                             </button>
                             <div class="flex space-x-4">
                                 <a href="news.html" class="px-6 py-3 border border-gray-300 rounded-lg hover:bg-gray-50 transition font-medium">
@@ -213,7 +213,7 @@ Kepala Lembaga Permasyarakatan , Budi Santoso, menyatakan aplikasi ini merupakan
                                     type="submit"
                                     class="px-6 py-3 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition font-medium"
                                 >
-                                    💾 Update Berita
+                                    <i class="fa-solid fa-floppy-disk"></i> Update Berita
                                 </button>
                             </div>
                         </div>
