--- a/admin/index.html
+++ b/admin/index.html
@@ -47,7 +47,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="flex items-center space-x-3 px-4 py-3 hover:bg-blue-700 rounded-lg transition">
+                        <a href="users.html" class="flex items-center space-x-3 px-4 py-3 hover:bg-blue-700 rounded-lg transition">
                             <span><i class="fa-solid fa-users"></i></span>
                             <span>Pengguna</span>
                         </a>
