--- a/news.html
+++ b/news.html
@@ -29,7 +29,7 @@
                     <a href="index.html" class="hover:text-blue-200 font-medium">Beranda</a>
                     <a href="news.html" class="hover:text-blue-200 font-medium border-b-2 border-white pb-1">Berita</a>
                     <a href="#profil" class="hover:text-blue-200 font-medium">Profil</a>
-                    <a href="#kontak" class="hover:text-blue-200 font-medium">Kontak</a>
+                    <a href="kontak.html" class="hover:text-blue-200 font-medium">Kontak</a>
                     <a href="login.html" class="bg-white text-[#1e3a8a] px-4 py-2 rounded hover:bg-blue-50 font-medium">Login Admin</a>
                 </nav>
             </div>
