--- a/admin/approval.html
+++ b/admin/approval.html
@@ -22,7 +22,7 @@
                     </div>
                     <div>
                         <h2 class="font-bold">Admin Panel</h2>
-                        <p class="text-xs text-blue-200">lapas Bandung</p>
+                        <p class="text-xs text-blue-200">lapas Medan</p>
                     </div>
                 </div>
             </div>
@@ -279,7 +279,7 @@
                 <div>
                     <label class="block text-sm font-medium text-gray-700 mb-2">Konten Berita (Preview)</label>
                     <div class="bg-gray-50 p-4 rounded-lg text-sm text-gray-700">
-                        <p class="mb-3">Pemerintah Daerah lapas Bandung dengan bangga mengumumkan pembukaan pendaftaran Program Magang Digital 2025. Program ini ditujukan untuk mahasiswa dan fresh graduate yang ingin mendapatkan pengalaman kerja di bidang teknologi informasi dan transformasi digital.</p>
+                        <p class="mb-3">Pemerintah Daerah lapas Medan dengan bangga mengumumkan pembukaan pendaftaran Program Magang Digital 2025. Program ini ditujukan untuk mahasiswa dan fresh graduate yang ingin mendapatkan pengalaman kerja di bidang teknologi informasi dan transformasi digital.</p>
                         <p>Peserta akan mendapatkan kesempatan untuk bekerja langsung dengan tim IT pemerintah daerah dalam berbagai proyek digitalisasi layanan publik...</p>
                     </div>
                 </div>
