--- a/admin/create-news.html
+++ b/admin/create-news.html
@@ -22,7 +22,7 @@
                     </div>
                     <div>
                         <h2 class="font-bold">Admin Panel</h2>
-                        <p class="text-xs text-blue-200">lapas Bandung</p>
+                        <p class="text-xs text-blue-200">lapas Medan</p>
                     </div>
                 </div>
             </div>
