--- a/admin/edit-news.html
+++ b/admin/edit-news.html
@@ -22,7 +22,7 @@
                     </div>
                     <div>
                         <h2 class="font-bold">Admin Panel</h2>
-                        <p class="text-xs text-blue-200">lapas Bandung</p>
+                        <p class="text-xs text-blue-200">lapas Medan</p>
                     </div>
                 </div>
             </div>
@@ -183,9 +183,9 @@
                                 rows="15"
                                 required
                                 class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent font-mono text-sm"
-                            >BANDUNG - WaliKota Medan secara resmi meluncurkan aplikasi layanan publik terintegrasi yang mengintegrasikan 27 jenis layanan administrasi pemerintahan dalam satu platform digital.
+                            >Medan - WaliKota Medan secara resmi meluncurkan aplikasi layanan publik terintegrasi yang mengintegrasikan 27 jenis layanan administrasi pemerintahan dalam satu platform digital.
 
-Aplikasi bernama "Bandung Smart Service" ini dirancang untuk memudahkan warga Kota Medan dalam mengakses berbagai layanan pemerintah tanpa harus datang langsung ke kantor dinas terkait.
+Aplikasi bernama "Medan Smart Service" ini dirancang untuk memudahkan warga Kota Medan dalam mengakses berbagai layanan pemerintah tanpa harus datang langsung ke kantor dinas terkait.
 
 Fitur unggulan meliputi:
 - Perpanjangan KTP dan Kartu Keluarga
