--- a/admin/index.html
+++ b/admin/index.html
@@ -23,7 +23,7 @@
                         </div>
                         <div>
                             <h2 class="font-bold">Admin Panel</h2>
-                            <p class="text-xs text-blue-200">lapas Bandung</p>
+                            <p class="text-xs text-blue-200">lapas Medan</p>
                         </div>
                     </div>
                     <button id="closeSidebar" class="lg:hidden text-white hover:text-blue-200">
