--- a/index.html
+++ b/index.html
@@ -260,9 +260,9 @@
                 <div>
                     <h3 class="text-lg font-bold mb-4">Kontak</h3>
                     <div class="space-y-2 text-sm text-blue-200">
-                        <p><i class="fa-solid fa-location-dot"></i> Jl. Wastukencana No. 2, Bandung</p>
+                        <p><i class="fa-solid fa-location-dot"></i> Jl. Wastukencana No. 2, Medan</p>
                         <p>📞 (022) 4233823</p>
-                        <p>✉️ lapas@bandung.go.id</p>
+                        <p>✉️ lapas@Medan.go.id</p>
                         <p>🕒 Senin - Jumat: 08.00 - 16.00 WIB</p>
                     </div>
                 </div>
