--- a/kontak.html
+++ b/kontak.html
@@ -27,7 +27,7 @@
                 </div>
                 <nav class="hidden md:flex items-center space-x-6">
                     <a href="index.html" class="hover:text-blue-200 font-medium">Beranda</a>
-                    <a href="berita.html" class="hover:text-blue-200 font-medium">Berita</a>
+                    <a href="news.html" class="hover:text-blue-200 font-medium">Berita</a>
                     <a href="pengumuman.html" class="hover:text-blue-200 font-medium">Pengumuman</a>
                     
                     <!-- Dropdown Profil -->
@@ -40,7 +40,7 @@
                         </button>
                         <div class="absolute left-0 mt-2 w-56 bg-white rounded-lg shadow-xl opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-200">
                             <div class="py-2">
-                                <a href="profil.html" class="block px-4 py-2 text-gray-800 hover:bg-blue-50 hover:text-[#1e3a8a] font-medium">Tentang Instansi</a>
+                                <a href="profile.html" class="block px-4 py-2 text-gray-800 hover:bg-blue-50 hover:text-[#1e3a8a] font-medium">Tentang Instansi</a>
                                 <a href="visi-misi.html" class="block px-4 py-2 text-gray-800 hover:bg-blue-50 hover:text-[#1e3a8a] font-medium">Visi & Misi</a>
                                 <a href="struktur.html" class="block px-4 py-2 text-gray-800 hover:bg-blue-50 hover:text-[#1e3a8a] font-medium">Struktur Organisasi</a>
                             </div>
@@ -61,7 +61,7 @@
         <div id="mobileMenu" class="hidden md:hidden bg-[#1e4a9a] border-t border-blue-700">
             <div class="container mx-auto px-4 py-4 space-y-2">
                 <a href="index.html" class="block py-2 hover:bg-blue-700 px-3 rounded">Beranda</a>
-                <a href="berita.html" class="block py-2 hover:bg-blue-700 px-3 rounded">Berita</a>
+                <a href="news.html" class="block py-2 hover:bg-blue-700 px-3 rounded">Berita</a>
                 <a href="pengumuman.html" class="block py-2 hover:bg-blue-700 px-3 rounded">Pengumuman</a>
                 
                 <!-- Mobile Dropdown Profil -->
@@ -73,7 +73,7 @@
                         </svg>
                     </button>
                     <div id="profilDropdown" class="hidden pl-4 space-y-1 mt-1">
-                        <a href="profil.html" class="block py-2 hover:bg-blue-700 px-3 rounded text-sm">Tentang Instansi</a>
+                        <a href="profile.html" class="block py-2 hover:bg-blue-700 px-3 rounded text-sm">Tentang Instansi</a>
                         <a href="visi-misi.html" class="block py-2 hover:bg-blue-700 px-3 rounded text-sm">Visi & Misi</a>
                         <a href="struktur.html" class="block py-2 hover:bg-blue-700 px-3 rounded text-sm">Struktur Organisasi</a>
                     </div>
@@ -117,7 +117,7 @@
                             <i class="fa-solid fa-location-dot text-3xl text-blue-600"></i>
                         </div>
                         <h3 class="font-bold text-lg text-gray-800 mb-2">Alamat Kantor</h3>
-                        <p class="text-gray-600 text-sm">Jl. Wastukencana No. 2<br>Bandung, Jawa Barat<br>40115, Indonesia</p>
+                        <p class="text-gray-600 text-sm">Jl. Wastukencana No. 2<br>Medan, Jawa Barat<br>40115, Indonesia</p>
                     </div>
                     <div class="bg-white rounded-xl shadow-md p-6 text-center hover:shadow-lg transition-shadow">
                         <div class="w-16 h-16 bg-green-100 rounded-full flex items-center justify-center mx-auto mb-4">
@@ -204,7 +204,7 @@
                         <!-- Peta -->
                         <div class="bg-white rounded-xl shadow-md overflow-hidden">
                             <div class="h-80 bg-gray-200 flex items-center justify-center">
-                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.798464181229!2d107.6098549!3d-6.914744!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e64c7e2f7b5d%3A0x6c2c6e0c4c0c4c0c!2sBandung%2C%20Jawa%20Barat!5e0!3m2!1sid!2sid!4v1234567890" width="100%" height="320" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.798464181229!2d107.6098549!3d-6.914744!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e68e64c7e2f7b5d%3A0x6c2c6e0c4c0c4c0c!2sMedan%2C%20Jawa%20Barat!5e0!3m2!1sid!2sid!4v1234567890" width="100%" height="320" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                             </div>
                         </div>
 
@@ -271,9 +271,9 @@
                 <div>
                     <h3 class="text-lg font-bold mb-4">Kontak</h3>
                     <div class="space-y-2 text-sm text-blue-200">
-                        <p><i class="fa-solid fa-location-dot mr-2"></i>Jl. Wastukencana No. 2, Bandung</p>
+                        <p><i class="fa-solid fa-location-dot mr-2"></i>Jl. Wastukencana No. 2, Medan</p>
                         <p><i class="fa-solid fa-phone mr-2"></i>(022) 4233823</p>
-                        <p><i class="fa-solid fa-envelope mr-2"></i>lapas@bandung.go.id</p>
+                        <p><i class="fa-solid fa-envelope mr-2"></i>lapas@Medan.go.id</p>
                         <p><i class="fa-solid fa-clock mr-2"></i>Senin - Jumat: 08.00 - 16.00 WIB</p>
                     </div>
                 </div>
