--- a/visi-misi.html
+++ b/visi-misi.html
@@ -47,7 +47,7 @@
                         </div>
                     </div>
                     
-                    <a href="#" class="hover:text-blue-200 font-medium">Kontak</a>
+                    <a href="kontak.html" class="hover:text-blue-200 font-medium">Kontak</a>
                     <a href="login.html" class="bg-white text-[#1e3a8a] px-4 py-2 rounded hover:bg-blue-50 font-medium">Login Admin</a>
                 </nav>
                 <button class="md:hidden text-white" onclick="toggleMobileMenu()">
@@ -240,9 +240,9 @@
                 <div>
                     <h3 class="text-lg font-bold mb-4">Kontak</h3>
                     <div class="space-y-2 text-sm text-blue-200">
-                        <p><i class="fa-solid fa-location-dot mr-2"></i>Jl. Wastukencana No. 2, Bandung</p>
+                        <p><i class="fa-solid fa-location-dot mr-2"></i>Jl. Wastukencana No. 2, Medan</p>
                         <p><i class="fa-solid fa-phone mr-2"></i>(022) 4233823</p>
-                        <p><i class="fa-solid fa-envelope mr-2"></i>lapas@bandung.go.id</p>
+                        <p><i class="fa-solid fa-envelope mr-2"></i>lapas@Medan.go.id</p>
                         <p><i class="fa-solid fa-clock mr-2"></i>Senin - Jumat: 08.00 - 16.00 WIB</p>
                     </div>
                 </div>
