--- a/admin/news.html
+++ b/admin/news.html
@@ -34,31 +34,31 @@
             <nav class="p-4 overflow-y-auto h-[calc(100vh-120px)]">
                 <ul class="space-y-2">
                     <li>
-                        <a href="admin-dashboard.html" class="flex items-center space-x-3 px-4 py-3 hover:bg-blue-700 rounded-lg transition">
+                        <a href="index.html" class="flex items-center space-x-3 px-4 py-3 hover:bg-blue-700 rounded-lg transition">
                             <span><i class="fa-solid fa-gauge-high"></i></span>
                             <span>Dashboard</span>
                         </a>
                     </li>
                     <li>
-                        <a href="admin-berita.html" class="flex items-center space-x-3 px-4 py-3 bg-blue-700 rounded-lg font-medium">
+                        <a href="news.html" class="flex items-center space-x-3 px-4 py-3 bg-blue-700 rounded-lg font-medium">
                             <span><i class="fa-solid fa-newspaper"></i></span>
                             <span>Kelola Berita</span>
                         </a>
                     </li>
                     <li>
-                        <a href="admin-approval.html" class="flex items-center space-x-3 px-4 py-3 hover:bg-blue-700 rounded-lg transition">
+                        <a href="approval.html" class="flex items-center space-x-3 px-4 py-3 hover:bg-blue-700 rounded-lg transition">
                             <span><i class="fa-solid fa-circle-check"></i></span>
                             <span>Approval Berita</span>
                         </a>
                     </li>
                     <li>
-                        <a href="admin-users.html" class="flex items-center space-x-3 px-4 py-3 hover:bg-blue-700 rounded-lg transition">
+                        <a href="users.html" class="flex items-center space-x-3 px-4 py-3 hover:bg-blue-700 rounded-lg transition">
                             <span><i class="fa-solid fa-users"></i></span>
                             <span>Pengguna</span>
                         </a>
                     </li>
                     <li class="pt-4 mt-4 border-t border-blue-700">
-                        <a href="login.html" class="flex items-center space-x-3 px-4 py-3 hover:bg-red-600 rounded-lg transition">
+                        <a href="../login.html" class="flex items-center space-x-3 px-4 py-3 hover:bg-red-600 rounded-lg transition">
                             <span><i class="fa-solid fa-right-from-bracket"></i></span>
                             <span>Logout</span>
                         </a>
